--- a/docs/team/e0373972.md
+++ b/docs/team/e0373972.md
@@ -35,4 +35,11 @@ Interface (CLI)
 * Contributions to the DG:
   <br> 1. Developer Guide Draft - Pull Request [#77](https://github.com/AY2122S1-TIC4001-F18-2/tp/pull/77)
   <br> 2. Add Class Diagram, Object Diagram, Sequence Diagram - Pull Request [#108](https://github.com/AY2122S1-TIC4001-F18-2/tp/pull/108)
+  <br> 3. Update Diagram - Pull Request [#118](https://github.com/AY2122S1-TIC4001-F18-2/tp/pull/118)
 
+* ```Class diagram (refer to the image below)```<br/>
+   <img src="Diagram/class_diagram.jpg" width="2500" height=auto>
+* ```Object diagram```<br/>
+   <img src="Diagram/object_diagram.jpg" width="2500" height=auto>
+* ```ListCommand sequence diagram```<br/>
+  <img src="Diagram/ListCommand_sequence_diagram.jpg" width="800" height=auto> <br/>
