--- a/docs/team/e0373972.md
+++ b/docs/team/e0373972.md
@@ -6,36 +6,39 @@ EXPENSES MANAGEMENT SYSTEM (EMS) is a desktop app for managing expenses, optimiz
 Interface (CLI)
 
 ### Summary of Contributions
-#### Given below are my contributions to the project.
 
-* **Enhancements implemented:**
+Given below are my contributions to the project.
 
-* **Code Contributed:** [RepoSense Link](https://nus-tic4001-ay2122s1.github.io/tp-dashboard/?search=&sort=groupTitle&sortWithin=title&timeframe=commit&mergegroup=&groupSelect=groupByRepos&breakdown=true&checkedFileTypes=docs~functional-code~test-code~other&since=2021-09-17&tabOpen=true&tabType=authorship&zFR=false&tabAuthor=e0373972&tabRepo=AY2122S1-TIC4001-F18-2%2Ftp%5Bmaster%5D&authorshipIsMergeGroup=false&authorshipFileTypes=docs~functional-code~test-code&authorshipIsBinaryFileTypeChecked=false)
-  <br>
-  <br> ```Milestone v3.0```
+#### Code Contributed: [RepoSense Link](https://nus-tic4001-ay2122s1.github.io/tp-dashboard/?search=&sort=groupTitle&sortWithin=title&timeframe=commit&mergegroup=&groupSelect=groupByRepos&breakdown=true&checkedFileTypes=docs~functional-code~test-code~other&since=2021-09-17&tabOpen=true&tabType=authorship&zFR=false&tabAuthor=e0373972&tabRepo=AY2122S1-TIC4001-F18-2%2Ftp%5Bmaster%5D&authorshipIsMergeGroup=false&authorshipFileTypes=docs~functional-code~test-code&authorshipIsBinaryFileTypeChecked=false)
+  
+#### Enhancements implemented:
+
+* ```Milestone v3.0```
   <br> 1. Edit ListCommand and ListCommandTest - Pull Request [#99](https://github.com/AY2122S1-TIC4001-F18-2/tp/pull/99)
   <br> 2. Delete Command Test - Pull Request [#92](https://github.com/AY2122S1-TIC4001-F18-2/tp/pull/92)
   <br> 3. Add Income Command Test - Pull Request [#90](https://github.com/AY2122S1-TIC4001-F18-2/tp/pull/90)
   <br> 4. Add Expense Command Test - Pull Request [#89](https://github.com/AY2122S1-TIC4001-F18-2/tp/pull/89)
   <br> 5. List Command Test - Pull Request [#74](https://github.com/AY2122S1-TIC4001-F18-2/tp/pull/74)
   <br>
-  <br> ```Milestone v2.0``` 
+* ```Milestone v2.0``` 
   <br> 1. Timing - Pull Request [#65](https://github.com/AY2122S1-TIC4001-F18-2/tp/pull/65)
   <br> 2. Add Income Command - Pull Request [#62](https://github.com/AY2122S1-TIC4001-F18-2/tp/pull/62)
+  <br>
+* ```Milestone v1.0```
+  <br> 1. Add Logging - Pull Request [#46](https://github.com/AY2122S1-TIC4001-F18-2/tp/pull/46)
+  <br> 1. Add junit and assertion - Pull Request [#45](https://github.com/AY2122S1-TIC4001-F18-2/tp/pull/45)
+  <br> 2. List - Pull Request [#23](https://github.com/AY2122S1-TIC4001-F18-2/tp/pull/23)
+  <br>
 
 
-* **Contributions to team-based tasks**
-  <br> 1. Set up the project repo
+#### Contributions to the DG:
+* UG Draft - Pull Request [#75](https://github.com/AY2122S1-TIC4001-F18-2/tp/pull/75)
 
-* **Project Management:**
-
-**Documentation:**
-* Contributions to the UG:
-  <br> 1. UG Draft - Pull Request [#75](https://github.com/AY2122S1-TIC4001-F18-2/tp/pull/75)
-* Contributions to the DG:
-  <br> 1. Developer Guide Draft - Pull Request [#77](https://github.com/AY2122S1-TIC4001-F18-2/tp/pull/77)
-  <br> 2. Add Class Diagram, Object Diagram, Sequence Diagram - Pull Request [#108](https://github.com/AY2122S1-TIC4001-F18-2/tp/pull/108)
-  <br> 3. Update Diagram - Pull Request [#118](https://github.com/AY2122S1-TIC4001-F18-2/tp/pull/118)
+#### Contributions to the DG:
+* Developer Guide Draft - Pull Request [#77](https://github.com/AY2122S1-TIC4001-F18-2/tp/pull/77)
+* Add Class Diagram, Object Diagram, Sequence Diagram - Pull Request [#108](https://github.com/AY2122S1-TIC4001-F18-2/tp/pull/108)
+* Update Diagram - Pull Request [#118](https://github.com/AY2122S1-TIC4001-F18-2/tp/pull/118)
+* Design Architecture - Pull Request [#129](https://github.com/AY2122S1-TIC4001-F18-2/tp/pull/129)
 
 * ```Class diagram (refer to the image below)```<br/>
    <img src="Diagram/class_diagram.jpg" width="2500" height=auto>
@@ -43,3 +46,34 @@ Interface (CLI)
    <img src="Diagram/object_diagram.jpg" width="2500" height=auto>
 * ```ListCommand sequence diagram```<br/>
   <img src="Diagram/ListCommand_sequence_diagram.jpg" width="800" height=auto> <br/>
+* ```Design Architecture```<br/>
+  <img src="Diagram/Design_Architecture.png" width="800" height=auto> <br/>
+
+#### Contributions to team-based tasks:
+* Set up the project repo
+* Added Logging function
+* Added assertion
+* Solved CI error issues
+* Managed releases v1.0 - v3.0 (3 releases) on GitHub
+
+#### Review/mentoring contributions:
+[#130](https://github.com/AY2122S1-TIC4001-F18-2/tp/pull/130)
+[#127](https://github.com/AY2122S1-TIC4001-F18-2/tp/pull/127)
+[#123](https://github.com/AY2122S1-TIC4001-F18-2/tp/pull/123)
+[#119](https://github.com/AY2122S1-TIC4001-F18-2/tp/pull/119)
+[#116](https://github.com/AY2122S1-TIC4001-F18-2/tp/pull/116)
+[#115](https://github.com/AY2122S1-TIC4001-F18-2/tp/pull/115)
+[#98](https://github.com/AY2122S1-TIC4001-F18-2/tp/pull/98)
+[#93](https://github.com/AY2122S1-TIC4001-F18-2/tp/pull/93)
+[#86](https://github.com/AY2122S1-TIC4001-F18-2/tp/pull/86)
+[#84](https://github.com/AY2122S1-TIC4001-F18-2/tp/pull/84)
+[#76](https://github.com/AY2122S1-TIC4001-F18-2/tp/pull/76)
+[#73](https://github.com/AY2122S1-TIC4001-F18-2/tp/pull/73)
+[#68](https://github.com/AY2122S1-TIC4001-F18-2/tp/pull/68)
+[#66](https://github.com/AY2122S1-TIC4001-F18-2/tp/pull/66)
+[#60](https://github.com/AY2122S1-TIC4001-F18-2/tp/pull/60)
+[#47](https://github.com/AY2122S1-TIC4001-F18-2/tp/pull/47)
+[#43](https://github.com/AY2122S1-TIC4001-F18-2/tp/pull/43)
+[#39](https://github.com/AY2122S1-TIC4001-F18-2/tp/pull/39)
+[#24](https://github.com/AY2122S1-TIC4001-F18-2/tp/pull/24)
+[#22](https://github.com/AY2122S1-TIC4001-F18-2/tp/pull/22)
