--- a/docs/team/e0373972.md
+++ b/docs/team/e0373972.md
@@ -26,8 +26,8 @@ Given below are my contributions to the project.
   <br>
 * ```Milestone v1.0```
   <br> 1. Add Logging - Pull Request [#46](https://github.com/AY2122S1-TIC4001-F18-2/tp/pull/46)
-  <br> 1. Add junit and assertion - Pull Request [#45](https://github.com/AY2122S1-TIC4001-F18-2/tp/pull/45)
-  <br> 2. List - Pull Request [#23](https://github.com/AY2122S1-TIC4001-F18-2/tp/pull/23)
+  <br> 2. Add junit and assertion - Pull Request [#45](https://github.com/AY2122S1-TIC4001-F18-2/tp/pull/45)
+  <br> 3. List - Pull Request [#23](https://github.com/AY2122S1-TIC4001-F18-2/tp/pull/23)
   <br>
 
 
@@ -40,15 +40,6 @@ Given below are my contributions to the project.
 * Update Diagram - Pull Request [#118](https://github.com/AY2122S1-TIC4001-F18-2/tp/pull/118)
 * Design Architecture - Pull Request [#129](https://github.com/AY2122S1-TIC4001-F18-2/tp/pull/129)
 
-* ```Class diagram (refer to the image below)```<br/>
-   <img src="Diagram/class_diagram.jpg" width="2500" height=auto>
-* ```Object diagram```<br/>
-   <img src="Diagram/object_diagram.jpg" width="2500" height=auto>
-* ```ListCommand sequence diagram```<br/>
-  <img src="Diagram/ListCommand_sequence_diagram.jpg" width="800" height=auto> <br/>
-* ```Design Architecture```<br/>
-  <img src="Diagram/Design_Architecture.png" width="800" height=auto> <br/>
-
 #### Contributions to team-based tasks:
 * Set up the project repo
 * Added Logging function
@@ -57,23 +48,24 @@ Given below are my contributions to the project.
 * Managed releases v1.0 - v3.0 (3 releases) on GitHub
 
 #### Review/mentoring contributions:
-[#130](https://github.com/AY2122S1-TIC4001-F18-2/tp/pull/130)
-[#127](https://github.com/AY2122S1-TIC4001-F18-2/tp/pull/127)
-[#123](https://github.com/AY2122S1-TIC4001-F18-2/tp/pull/123)
-[#119](https://github.com/AY2122S1-TIC4001-F18-2/tp/pull/119)
-[#116](https://github.com/AY2122S1-TIC4001-F18-2/tp/pull/116)
-[#115](https://github.com/AY2122S1-TIC4001-F18-2/tp/pull/115)
-[#98](https://github.com/AY2122S1-TIC4001-F18-2/tp/pull/98)
-[#93](https://github.com/AY2122S1-TIC4001-F18-2/tp/pull/93)
-[#86](https://github.com/AY2122S1-TIC4001-F18-2/tp/pull/86)
-[#84](https://github.com/AY2122S1-TIC4001-F18-2/tp/pull/84)
-[#76](https://github.com/AY2122S1-TIC4001-F18-2/tp/pull/76)
-[#73](https://github.com/AY2122S1-TIC4001-F18-2/tp/pull/73)
-[#68](https://github.com/AY2122S1-TIC4001-F18-2/tp/pull/68)
-[#66](https://github.com/AY2122S1-TIC4001-F18-2/tp/pull/66)
-[#60](https://github.com/AY2122S1-TIC4001-F18-2/tp/pull/60)
-[#47](https://github.com/AY2122S1-TIC4001-F18-2/tp/pull/47)
-[#43](https://github.com/AY2122S1-TIC4001-F18-2/tp/pull/43)
-[#39](https://github.com/AY2122S1-TIC4001-F18-2/tp/pull/39)
-[#24](https://github.com/AY2122S1-TIC4001-F18-2/tp/pull/24)
-[#22](https://github.com/AY2122S1-TIC4001-F18-2/tp/pull/22)
+* PR approved:
+  [#130](https://github.com/AY2122S1-TIC4001-F18-2/tp/pull/130)
+  [#127](https://github.com/AY2122S1-TIC4001-F18-2/tp/pull/127)
+  [#123](https://github.com/AY2122S1-TIC4001-F18-2/tp/pull/123)
+  [#119](https://github.com/AY2122S1-TIC4001-F18-2/tp/pull/119)
+  [#116](https://github.com/AY2122S1-TIC4001-F18-2/tp/pull/116)
+  [#115](https://github.com/AY2122S1-TIC4001-F18-2/tp/pull/115)
+  [#98](https://github.com/AY2122S1-TIC4001-F18-2/tp/pull/98)
+  [#93](https://github.com/AY2122S1-TIC4001-F18-2/tp/pull/93)
+  [#86](https://github.com/AY2122S1-TIC4001-F18-2/tp/pull/86)
+  [#84](https://github.com/AY2122S1-TIC4001-F18-2/tp/pull/84)
+  [#76](https://github.com/AY2122S1-TIC4001-F18-2/tp/pull/76)
+  [#73](https://github.com/AY2122S1-TIC4001-F18-2/tp/pull/73)
+  [#68](https://github.com/AY2122S1-TIC4001-F18-2/tp/pull/68)
+  [#66](https://github.com/AY2122S1-TIC4001-F18-2/tp/pull/66)
+  [#60](https://github.com/AY2122S1-TIC4001-F18-2/tp/pull/60)
+  [#47](https://github.com/AY2122S1-TIC4001-F18-2/tp/pull/47)
+  [#43](https://github.com/AY2122S1-TIC4001-F18-2/tp/pull/43)
+  [#39](https://github.com/AY2122S1-TIC4001-F18-2/tp/pull/39)
+  [#24](https://github.com/AY2122S1-TIC4001-F18-2/tp/pull/24)
+  [#22](https://github.com/AY2122S1-TIC4001-F18-2/tp/pull/22)
